--- a/app/views/hearts/_button.html.erb
+++ b/app/views/hearts/_button.html.erb
@@ -1,45 +1,2 @@
-<% if user_signed_in? %>
-
-<% if current_user.heart?(post)%>
-<%= button_to unheart_path(post_id: post.id), remote: true, method: :delete, class:"col s4 btn-flat" do%>
-
-<%= icon('heart',class:'red-text', style:'font-size:2.5rem;') %>
-
-<% end %>
-
-<% else %>
-
-<%= button_to heart_path(post_id: post.id), remote: true, class:"col s4 btn-flat" do%>
-<%= icon('heart-o',style:'font-size:2.5rem') %>
-
-<% end %>
-<% end %>
-
-<% elsif client_signed_in? %>
-
-<% if current_client.heart?(post)%>
-<%= button_to unheart_path(post_id: post.id), remote: true, method: :delete, class:"btn-flat" do%>
-
-<%= icon('heart',class:'red-text', style:'font-size:2.5rem;') %>
-
-<% end %>
-<%= show_likes post %>
-
-<% else %>
-
-<%= button_to heart_path(post_id: post.id), remote: true, class:"btn-flat" do%>
-<%= icon('heart-o',style:'font-size:2.5rem') %>
-<% end %>
-<%= show_likes post %>
-
-<% end %>
-<% end %>
-
-<% if client_signed_in? or user_signed_in? %>
-<% else %>
-<% if post.hearts.count > 0 %>
-<%= icon('heart',class:'red-text', style:'font-size:2.5rem;') %>
-<% else %>
-<%= icon('heart-o',style:'font-size:2.5rem') %>
-<% end %>
-<% end %>
+<%= heart_button(post) %>
+<%= show_likes(post) %>
