--- a/app/views/profiles/_post_frame.html.erb
+++ b/app/views/profiles/_post_frame.html.erb
@@ -1,62 +1,3 @@
-
 <% @profile.posts.order(created_at: :desc).each do |post| %>
-  <ul class="collection z-depth-2">
-    <li class="collection-item row">
-      <img style="vertical-align: middle; margin-left:2%; max-width:50px;" src="<%= @profile.avatar %>" alt="" class="circle responsive-img">
-      <b><%= @profile.name %></b>
-
-      <% if user_signed_in? %>
-          <% if current_user.id == post.profile.user_id %>
-            <%= link_to post, method: :delete, data: { confirm: '¿Borrar tu publicación?' }, class:"right" do%>
-              <%= icon("trash") %>
-            <% end %>
-
-            <%= link_to edit_post_path(post), class:"right" do%>
-              <%= icon("pencil-square-o") %>
-            <% end %>
-          <% end %>
-      <% end %>
-    </li>
-
-    <li class="collection-item">
-      <p>
-        <%= post.body %>
-      </p>
-      <% if post.pictures.count > 1 %>
-        <div class="fotorama" data-nav="thumbs" data-allowfullscreen="true">
-            <% post.pictures.each do |pic| %>
-              <a href="<%= pic.image.url() %>"><img src="<%= pic.image.url(:thumb)%>" class:"responsive-img"></a>
-            <% end %>
-        </div>
-        <% else %>
-        <% post.pictures.each do |pic| %>
-        <div class="center">
-          <%= image_tag(pic.image, class:"responsive-img")%>
-        </div>
-          <% end %>
-      <% end %>
-      <% if post.video.present? || post.video =! ""%>
-          <% if post.pictures.count < 1 %>
-            <%= youtube_video post.video %>
-            <% else %>
-            Ver video: <a href="<%= post.video%>"><%= post.video %></a>
-          <% end %>
-      <% end %>
-
-    </li>
-    <div class="row" style="margin-bottom: 2px;">
-        <%= div_for(post, class: "col s4 center", style:"max-height: 1px;") do %>
-            <%= render partial: "hearts/button", locals: {post: post} %>
-          <% end %>
-        <div class="col s4 center">
-          <%= link_to post do %>
-            <%= icon('comments',style:'font-size:2.5rem;') %>
-          <% end %>
-        </div>
-        <div class="col s4 center">
-          <%= icon('share-alt',style:'font-size:2.5rem;') %>
-        </div>
-      </div>
-
-   </ul>
+  <%= render partial: "posts/post",locals:{post: post} %>
 <% end %>
