--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -3,69 +3,47 @@
    body { font-size: 0.9em; }
 
 }
-
-
-/* fallback */
-@font-face {
-  font-family: 'Material Icons';
-  font-style: normal;
-  font-weight: 400;
+/*Fix Bootstrap navbar margin*/
+body { 
+  padding-top: 50px; 
 }
 
-.material-icons {
-  font-size: 2rem;
-  line-height: 1
+.center{
+  text-align: center;
 }
-.post-icons {
-  font-size: 2.5rem;
-  line-height: 1
-}
-.avatar_profile{
-  vertical-align: middle;
-  margin-left:2%;
-  max-width:50px;
-}
-.section-navbar{
-  margin-left: 5%;
-  margin-right: 5%;
+img.responsive-img,
+video.responsive-video {
+  max-width: 100%;
+  height: auto;
 }
 
-.icon-navbar {
-  font-size: 2.7rem;
-  height: 56px;
-  line-height: 56px;
+.video-container {
+  position: relative;
+  padding-bottom: 56.25%;
+  height: 0;
+  overflow: hidden;
 }
 
-.badge1 {
+.video-container iframe, .video-container object, .video-container embed {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.cover
+{
+    height: 200px;
+    overflow: hidden;
+    /*margin: 10px;*/
     position: relative;
-    top: -2.5rem;
-    right: -2rem;
-    padding: 3px 7px;
-    /*background: -webkit-linear-gradient(top, #FF6969 0%,#ff0000 100%);
-    border-radius:100px;
-    box-shadow: 0 1px 2px rgba(0,0,0,.5), 0 1px 4px rgba(0,0,0,.4), 0 0 1px rgba(0,0,0,.7) inset, 0 10px 0px rgba(255,255,255,.11) inset;
-    -webkit-background-clip: padding-box;
-    font:bold 13px/16px "Helvetica Neue", sans-serif;
-    color: white;
-    text-decoration: none;
-    text-shadow: 0 -1px 0 rgba(0,0,0,.6);*/
-}​
-.counter {
-    position: relative;
-    top:-15px;
-    right: 18px;
-    padding: 3px 7px;
-    border-radius:100px;
-    background: -webkit-linear-gradient(top, #FF6969 0%,#ff0000 100%);
-    box-shadow: 0 1px 2px rgba(0,0,0,.5), 0 1px 4px rgba(0,0,0,.4), 0 0 1px rgba(0,0,0,.7) inset, 0 10px 0px rgba(255,255,255,.11) inset;
-    -webkit-background-clip: padding-box;
-    font:bold 13px/16px "Helvetica Neue", sans-serif;
-    color: white;
-    text-decoration: none;
-    text-shadow: 0 -1px 0 rgba(0,0,0,.6);
-}​
+}
 .cover-img {
-position: relative;
+    position:absolute;
+
+    min-height: 100%;
+    min-width: 100%;
 }
 
 .profile-img {
@@ -138,157 +116,6 @@ position: relative;
     .apple_pagination a:hover, .apple_pagination a:focus {
       text-decoration: underline; }
 
-/*ADMIN SIDEBAR*/
-.mini-img{
-  width: 50px;
-  height: 50px;
-}
-
-.main-sidebar{
-  position: relative;
-  width: 230px;
-  background-color: #222d32;
-  height: 100vh;
-  float: left;
-  margin-right: 1%;
-}
-.side-blue{
-  background-color: #3c8dbc;
-  margin-top: 0px;
-}
-.li-sidebar{
-    font-size: 14px;
-    font-size: 12px;
-    overflow: hidden;
-    text-overflow: clip;
-    list-style: none;
-}
-.li-sidebar a{
-  color: #b8c7ce;
-  padding: 12px 5px 12px 15px;
-  display: block;
-  cursor: auto;
-}
-.li-title{
-  padding: 10px 25px 10px 15px;
-  color: #4b646f;
-  background: #1a2226;
-}
-.icon-middle{
-  margin-right: 10%;
-  vertical-align: middle;
-}
-hl{
-  margin: 0;
-  font-size: 24px;
-  color: #424242;
-}
-.content{
-    min-height: 250px;
-    padding: 15px;
-    margin-right: auto;
-    margin-left: auto;
-    padding-left: 15px;
-    padding-right: 15px;
-}
-.content-wrapper{
-  margin-left: 230px;
-  background-color: #ecf0f5;
-  height: 100vh;
-}
-
-.stats-label{
-  background-color: #d2d6de;
-  margin: 1%;
-}
-
-.info-box{
-  display: block;
-  min-height: 90px;
-  background: #fff;
-  width: 100%;
-  box-shadow: 0 1px 1px rgba(0,0,0,0.1);
-  border-radius: 2px;
-  margin-bottom: 15px;
-}
-.info-box-icon{
-  border-top-left-radius: 2px;
-    border-top-right-radius: 0;
-    border-bottom-right-radius: 0;
-    border-bottom-left-radius: 2px;
-    display: block;
-    float: left;
-    height: 90px;
-    width: 90px;
-    text-align: center;
-    line-height: 90px;
-}
-.info-box-content{
-  font-size: 18px;
-  padding: 10px 10px;
-  margin-left: 90px;
-}
-.with-top{
-  border-top: 3px solid #d2d6de;
-}
-.panel-box{
-  position: relative;
-  border-radius: 3px;
-  background: #ffffff;
-  border-top: 3px solid #d2d6de;
-  margin-bottom: 20px;
-  width: 100%;
-  box-shadow: 0 1px 1px rgba(0,0,0,0.1);
-  padding: 10px;
-}
-.box-header {
-    color: #444;
-    display: block;
-    position: relative;
-    border-bottom: 1px solid #f4f4f4;
-}
-.only-header{
-  background: #ffffff;
-  border-radius: 3px;
-  border-top: 3px solid #d2d6de;
-  padding: 5px;
-}
-.user_list{
-  width: 25%;
-  float: left;
-  padding: 10px;
-  text-align: center;
-}
-.coupon-amount{
-  color: #FFFFFF;
-  font-size: 30px;
-}
-.redeem-btn{
-  display: block;
-  cursor: auto;
-}
-.coupon-box{
-  background-color: #F2F2F2;
-}
-.event-ico{
-  margin-top: 1%;
-}
-.appview{
-  background-image: url("back_login.jpg");
-  background-size: 100% 100%;
-  width: 100%;
-  height: 100%;
-  height: auto !important;
-  min-height:100%;
-}
-/*ADMIN SIDEBAR*/
-
-.mini-avatar{
-  max-width: 100%;
-}
-.mini-cover{
-  max-height: 50%;
-}
 
 /*SPAN COVER*/
 .cover{
@@ -362,4 +189,11 @@ hl{
 .actions-post{
   font-size: 20px;
   
+}
+.white-text{
+  color: white;
+}
+
+.promo-img{
+  max-height: 250px;
 }
