--- a/app/views/menus/search.html.erb
+++ b/app/views/menus/search.html.erb
@@ -1,36 +1,27 @@
-<ul class="tabs">
-  <li class="tab col s3"><a href="#profiles">Perfiles</a></li>
-  <li class="tab col s3"><a href="#offers">Ofertas</a></li>
-</ul>
-
 <div class="container">
-    <div class="row">
-      <div class="col s12">
-        <div class="col s12" id="profiles">
-          <%= form_tag(profiles_path, method: "get", id: "search-form") do %>
-            <h5 class="grey-text darken-4">Perfiles</h5>
-            <p class="grey-text darken-4">
-              Buscar perfiles de negocio y empresas.
-            </p>
-            <%= text_field_tag :query, params[:query], placeholder: "Buscar...",class:"grey-text darken-4", style:"max-width: 100%;" %>
-              <%= button_tag(type: 'submit', class: "btn-large green right") do %>
-                Buscar <%= icon("paper-plane") %>
-              <% end %>
-          <% end %>
-        </div>
+<div class="center">
+    <h2><em>Resultados de la busqueda: <b><%= params[:query] %></b></em></h2>
+</div>
+  <h3>Ofertas</h3>
+  <div class="row">
+    <% @search.each do |offer| %>
+    <% if is_offer?(offer) %>
 
-        <div class="col s12" id="offers">
-            <%= form_tag(offers_path, :method => "get", id: "search-form") do %>
-              <h5 class="grey-text darken-4">Ofertas</h5>
-              <p class="grey-text darken-4">
-                Busca productos o servicios segun tu presupuesto.
-              </p>
-              <%= text_field_tag :query, params[:query], placeholder: "Buscar ejem:'Comida C$200'",class:"grey-text darken-4", style:"max-width: 100%;" %>
-                <%= button_tag(type: 'submit', class: "btn-large green right") do %>
-                  <%= icon("paper-plane") %>Buscar
-                <% end %>
-            <% end %>
-          </div>
-        </div>
-      </div>
-    </div>
+
+    <%= render partial:'offers/offer', locals:{offer: offer} %>
+
+    <% end %>
+    <% end %>
+
+  </div>
+
+  <h3>Perfiles</h3>
+  <div class="row">
+    <% @search.each do |profile| %>
+    <% if is_profile?(profile) %>
+    <%= render partial:'menus/search/profile', locals:{profile: profile} %>
+    <% end %>
+    <% end %>
+  </div>
+
+</div>
