--- a/app/views/menus/search/_profile.html.erb
+++ b/app/views/menus/search/_profile.html.erb
@@ -1,9 +1,6 @@
-<div class="row">
-    <% if @promoved_profiles.present? %>
-    <% @promoved_profiles.each do |profile| %>
     <div class="col-sm-6 col-md-4">
         <div class="thumbnail">
-            <%= link_to image_tag(profile.avatar(), class:"promo-img responsive-img"), profile %>
+            <%= link_to image_tag(profile.avatar(), class:"promo-img responsive-img",lazy:true), profile %>
             <div class="caption center">
                 <b><%= profile.name %></b>
                 <br>
@@ -17,7 +14,3 @@
             </div>
         </div>
     </div>
-    <% end %>
-</div>
-<% end %>
-
