--- a/app/views/offers/index.html.erb
+++ b/app/views/offers/index.html.erb
@@ -1,16 +1,11 @@
 <div class="container">
-
-  <%= form_tag(offers_path, :method => "get", id: "search-form") do %>
-    <h5 class="grey-text darken-4">Buscar</h5>
-    <p class="grey-text darken-4">
-      Busca productos o servicios segun tu presupuesto.
-    </p>
-    <%= text_field_tag :query, params[:query], placeholder: "Buscar ejem:'Comida C$200'",class:"grey-text darken-4", style:"max-width: 50%;" %>
-    <%= submit_tag "Buscar", class:"btn red" %>
+  <%= form_tag(search_path, method: "get", id: "search-form") do %>
+    <%= text_field_tag :query, params[:query], placeholder: "Buscar ejem:'Comida C$200'",class:"form-control"%>
+    <%= submit_tag "Buscar", class:"btn btn-default" %>
   <% end %>
 
 <% if @offers.present? %>
-  <%= render 'offerts' %>
+  <%= @offers.each do |offer| %><% end %>
 <% else %>
   <p class="grey-text darken-4">No hay resultados para: <em><%= params[:query] %></em>.</p>
 <% end %>
