--- a/app/views/posts/_video_frame.html.erb
+++ b/app/views/posts/_video_frame.html.erb
@@ -1,3 +1,3 @@
-<div class="video-container">
+<div class="video-container center">
   <iframe width="853" height="480" src= "//www.youtube.com/embed/<%= url %>" frameborder="0" allowfullscreen></iframe>
 </div>
