--- a/app/views/profiles/_form.html.erb
+++ b/app/views/profiles/_form.html.erb
@@ -2,7 +2,7 @@
 <p class="grey-text darken-4">
     Esta información se mostrará publicamente y será visto por todos los usuarios.
 </p>
-<%= form_for profile do |f|%>
+<%= form_for current_user.profile do |f|%>
 
 <ul class="collapsible popout" data-collapsible="accordion">
 
