--- a/app/assets/stylesheets/profile.css
+++ b/app/assets/stylesheets/profile.css
@@ -62,6 +62,9 @@
     font-size: 20px;
     border: 4px solid rgba(255, 255, 255, 0.8);
 }
+.foolow_btn, .unfollow{
+    background-color: red;
+}
 
 .header{
     color : #808080;
