--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -1,11 +1,11 @@
 @media only screen and (max-width: 320px) {
 
-   body { font-size: 0.9em; }
+ body { font-size: 0.9em; }
 
 }
 /*Fix Bootstrap navbar margin*/
 body { 
-  padding-top: 50px; 
+  padding-top: 55px; 
 }
 
 .center{
@@ -15,6 +15,17 @@ img.responsive-img,
 video.responsive-video {
   max-width: 100%;
   height: auto;
+}
+
+.small-img{
+  height: 300px;
+  width: auto;
+  overflow: hidden;
+}
+.small-img img{
+  height: 300px;
+  width: 400px;
+
 }
 
 .video-container {
@@ -34,26 +45,26 @@ video.responsive-video {
 
 .cover
 {
-    height: 200px;
-    overflow: hidden;
-    /*margin: 10px;*/
-    position: relative;
+  height: 200px;
+  overflow: hidden;
+  /*margin: 10px;*/
+  position: relative;
 }
 .cover-img {
-    position:absolute;
+  position:absolute;
 
-    min-height: 100%;
-    min-width: 100%;
+  min-height: 100%;
+  min-width: 100%;
 }
 
 .profile-img {
   position: absolute;
-      display: block;
-      top:0px;
-      left:auto;
-      /* right:0px; */
-      margin-top: 262px;
-      margin-right: -10px;
+  display: block;
+  top:0px;
+  left:auto;
+  /* right:0px; */
+  margin-top: 262px;
+  margin-right: -10px;
 }
 
 /*Tex size of lateral bar*/
@@ -77,7 +88,7 @@ video.responsive-video {
 }
 
 .fotorama__wrap {
-    margin: 0 auto;
+  margin: 0 auto;
 }
 
 /*Counter likes*/
@@ -96,104 +107,127 @@ video.responsive-video {
   cursor: default; }
   .apple_pagination a, .apple_pagination span {
     padding: 0.2em 0.3em; }
-  .apple_pagination .disabled {
-    color: #aaaaaa; }
-  .apple_pagination .current {
-    font-style: normal;
-    font-weight: bold;
-    background-color: #bebebe;
-    display: inline-block;
-    width: 1.4em;
-    height: 1.4em;
-    line-height: 1.5;
-    -moz-border-radius: 1em;
-    -webkit-border-radius: 1em;
-    border-radius: 1em;
-    text-shadow: rgba(255, 255, 255, 0.8) 1px 1px 1px; }
-  .apple_pagination a {
-    text-decoration: none;
-    color: black; }
-    .apple_pagination a:hover, .apple_pagination a:focus {
-      text-decoration: underline; }
+    .apple_pagination .disabled {
+      color: #aaaaaa; }
+      .apple_pagination .current {
+        font-style: normal;
+        font-weight: bold;
+        background-color: #bebebe;
+        display: inline-block;
+        width: 1.4em;
+        height: 1.4em;
+        line-height: 1.5;
+        -moz-border-radius: 1em;
+        -webkit-border-radius: 1em;
+        border-radius: 1em;
+        text-shadow: rgba(255, 255, 255, 0.8) 1px 1px 1px; }
+        .apple_pagination a {
+          text-decoration: none;
+          color: black; }
+          .apple_pagination a:hover, .apple_pagination a:focus {
+            text-decoration: underline; }
 
 
-/*SPAN COVER*/
-.cover{
-  position: relative;
-}
-.span-cover{
-  width:100%;
-  height: 100%;
-  color: white;
-  background: rgba(25, 25, 25, .3);
-  float:left;
-  position:absolute;
-  top:60%;
-  left:5px;
-}
-.span-text{
-  margin-left: 5%;
-  margin-right: 5%;
-}
+            /*SPAN COVER*/
+            .cover{
+              position: relative;
+            }
+            .span-cover{
+              width:100%;
+              height: 100%;
+              color: white;
+              background: rgba(25, 25, 25, .3);
+              float:left;
+              position:absolute;
+              top:60%;
+              left:5px;
+            }
+            .span-text{
+              margin-left: 5%;
+              margin-right: 5%;
+            }
 
-/*admin panel*/
-.categories-container {
-    height: 200px;
-    overflow-y: scroll;
-    overflow-x:hidden;
-}
+            /*admin panel*/
+            .categories-container {
+              height: 200px;
+              overflow-y: scroll;
+              overflow-x:hidden;
+            }
 
-.welcome_text{
-  background: rgba(25, 25, 25, .4);
-}
-.icon-navbar{
-  font-size: 2rem;
-}
-/*app download*/
-.app-banner{
-  max-height: 200px;
-}
-.phone-banner{
-  max-height: 450px;
-}
-.logo-banner{
-  max-height: 85px;
-  padding-right: 2%;
-}
+            .welcome_text{
+              background: rgba(25, 25, 25, .4);
+            }
+            .icon-navbar{
+              font-size: 2rem;
+            }
+            /*app download*/
+            .app-banner{
+              max-height: 200px;
+            }
+            .phone-banner{
+              max-height: 450px;
+            }
+            .logo-banner{
+              max-height: 85px;
+              padding-right: 2%;
+            }
 
-/*Crop banner coupons*/
-.crop {
-    width: 100%;
-    height: 20%;
-    overflow: hidden;
-}
+            /*Crop banner coupons*/
+            .crop {
+              width: 100%;
+              height: 20%;
+              overflow: hidden;
+            }
 
-.crop img {
-    width: 100%;
-    height: 300px;
-}
-.tab-offer{
-  height: 100px;
-  color: white;
-  margin: 0 auto;
-  text-align: center;
-}
-.tab-offer text{
-  height: 100px;
-  line-height: 100px;
-  white-space: nowrap;
-  font-size: 24px;
-}
+            .crop img {
+              width: 100%;
+              height: 300px;
+            }
+            .tab-offer{
+              height: 100px;
+              color: white;
+              margin: 0 auto;
+              text-align: center;
+            }
+            .tab-offer text{
+              height: 100px;
+              line-height: 100px;
+              white-space: nowrap;
+              font-size: 24px;
+            }
 
-/*Action POSTS*/
-.actions-post{
-  font-size: 20px;
-  
-}
-.white-text{
-  color: white;
-}
+            /*Action POSTS*/
+            .actions-post{
+              font-size: 20px;
 
-.promo-img{
-  max-height: 250px;
-}
+            }
+            .white-text{
+              color: white;
+            }
+
+            .promo-img{
+              max-height: 250px;
+            }
+
+            a.back-to-top {
+              display: none;
+              width: 60px;
+              height: 60px;
+              position: fixed;
+              z-index: 999;
+              right: 20px;
+              bottom: 20px;
+              background: #27AE61;
+              -webkit-border-radius: 30px;
+              -moz-border-radius: 30px;
+              border-radius: 30px;
+            }
+            a.back-to-top i{
+              vertical-align: middle;
+              color: white;
+              margin:15px;
+              font-size: 24px;
+            }
+            .avatar_profile{
+              max-width: 60px;
+            }
