--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -15,20 +15,12 @@
 		</div>
 	</div>
 	<% end %>
-
-	<% @category.profiles.each do |profile| %>
-  <div class="row panel-box">
-    <div class="col s4" style="padding:1px;">
-      <%= link_to image_tag(profile.cover, class:"responsive-img"),profile_path(profile) %>
-    </div>
-    <div class="col s8">
-      <b><%= profile.name %></b>
-      <div class="star-rating" data-score= <%= profile.reviews.average(:rating) %> >
-      </div>
-      <%= profile.body %>
-    </div>
+  
+  <div class="center">
+    <% @category.profiles.each do |profile| %>
+      <%= render partial:'profiles', locals:{profile: profile} %>
+    <% end %>
   </div>
-  <% end %>
 
 </div>
 </div>
