--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -53,43 +53,44 @@
           </li>
         </ul>
         <%= form_tag("/search", method: "get", class:"navbar-form navbar-right" ) do %>
-          <div class="form-group"><%= text_field_tag :query, params[:query], placeholder: "Buscar ejem:'Comida C$200'",class:"form-control"%>
-          </div>
-          <%= submit_tag "Buscar", class:"btn btn-default" %>
-          <% end %>
-        </div><!-- /.navbar-collapse -->
-      </div><!-- /.container-fluid -->
-    </nav>
+        <div class="form-group"><%= text_field_tag :query, params[:query], placeholder: "Buscar ejem:'Comida C$200'",class:"form-control"%>
+        </div>
+        <%= submit_tag "Buscar", class:"btn btn-default" %>
+        <% end %>
+      </div><!-- /.navbar-collapse -->
+    </div><!-- /.container-fluid -->
+  </nav>
 
-  </header>
-  <body>
-
-
-
-    <% if notice %>
-    <script type="text/javascript">
-      var $toastContent = $("<span> <%= icon('exclamation') %> <%= notice %></span>");
-      Materialize.toast($toastContent, 8000);
-    </script>
-    <% end %>
-
-    <%= yield%>
+</header>
+<body>
 
 
 
-  </body>
+  <% if notice %>
+  <div class="alert alert-danger alert-dismissible navbar-fixed-top" role="alert">
+    <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+    <%= notice %>
+  </div>
+  <% end %>
 
-  <div id="fb-root"></div>
-  <script>
-    $("img.lazy").lazyload({
-      treshold: 100,
-      effect : "fadeIn"
-    });
-    $('.star-rating').raty({
-      readOnly: true,
-      score: function () {
-        return $(this).attr('data-score');
-      }
-    });
-  </script>
-  </html>
+  <%= yield%>
+
+  <a href="#" class="back-to-top center"><%= icon('chevron-up') %></a>
+
+
+
+</body>
+
+<div id="fb-root"></div>
+<script>
+  $("img.lazy").lazyload({
+    effect : "fadeIn"
+  });
+  $('.star-rating').raty({
+    readOnly: true,
+    score: function () {
+      return $(this).attr('data-score');
+    }
+  });
+</script>
+</html>
