--- a/app/views/welcome/_promo_profiles.html.erb
+++ b/app/views/welcome/_promo_profiles.html.erb
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="row" style="height:430px;">
     <% if @promoved_profiles.present? %>
     <% @promoved_profiles.each do |profile| %>
     <div class="col-sm-6 col-md-4">
@@ -13,6 +13,7 @@
                     <%= truncate(profile.body ) %><br>
                     <b>Dirección:
                     </b><%= profile.direccion %>
+                    <div class="center"><%= link_to 'Ver Más', profile_path(profile), class:"btn btn-primary" %></div>
                 </p>
             </div>
         </div>
