--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,22 +1,43 @@
 <div class="container">
-<!--Tarjetas-->
-<h5>Recomendados</h5>
+  <!--Tarjetas-->
+  <h4>Recomendados</h4>
   <%= render 'promo_profiles' %>
-  <% if client_signed_in? or user_signed_in? %>
-  <h5>Inicio</h5>
-    <%= render @posts %>
-    <% else %>
-    <h5>Tendencias</h5>
-    <%= render @posts.sort_by { |post| post.hearts.count }.reverse %>
-<% end %>
-
-<div class="center">
- <ul class="pagination center">
-  <div class="apple_pagination">
-    <%= will_paginate @posts, container: false %>
-  </div>
-</ul>
 </div>
 
+<div class="container" style="max-width:700px;">
+  <% if client_signed_in? or user_signed_in? %>
+  <h4>Inicio</h4>
+  <%= render @posts %>
+
+  <div class="center">
+   <ul class="pagination center">
+    <div class="apple_pagination">
+      <%= will_paginate @posts, container: false %>
+    </div>
+  </ul>
+</div>
+
+<% else %>
+<h4>Tendencias</h4>
+<div class="center-block">
+  <%= render @posts.sort_by { |post| post.hearts.count }.reverse %>
+
+  <div class="center">
+   <ul class="pagination center">
+    <div class="apple_pagination">
+      <%= will_paginate @posts, container: false %>
+    </div>
+  </ul>
+</div>
+
+</div>
+<% end %>
+</div>
+
+<div class="container" style="max-width:700px;">
+  <h4>Comentarios recientes</h4>
+  <%= render @comments %>
+  <%= will_paginate @comments %>
+</div>
 
 </div>
